--- a/02-01/assets/style.css
+++ b/02-01/assets/style.css
@@ -107,10 +107,6 @@ body{
     display: flex;
 }
 
-.about .row .about-img{
-    /* width: 5rem; */
-}
-
 .about .row .about-img img{
     width: 25vw;
     border-radius: 50%;
@@ -131,6 +127,16 @@ body{
 
 
 .about .row .content .cta{
+    margin-top: 1rem;
+    display: inline-block;
+    padding: 1rem 3rem;
+    font-size: 1.4rem;
+    color: black;
+    border: 1px solid #3C79F5;
+    border-radius: 0.5rem;
+}
+
+.about .row .content .cta:hover{
     margin-top: 1rem;
     display: inline-block;
     padding: 1rem 3rem;
@@ -268,6 +274,17 @@ body{
     justify-content: center;
     padding: 0.75rem 3rem;
     font-size: 1.4rem;
+    color: black;
+    border: 1px solid #3C79F5;
+    border-radius: 0.5rem;
+}
+
+.blog .btn a:hover{
+    margin-top: 1rem;
+    display: inline-block;
+    justify-content: center;
+    padding: 0.75rem 3rem;
+    font-size: 1.4rem;
     color: #fff;
     background-color: #3C79F5;
     border-radius: 0.5rem;
@@ -325,13 +342,6 @@ footer{
     color: #5f5f5f;
  }
  
-
-
-
-
-
-
-
 
 /* Media Queries */
 
