--- a/10-03/css/styles.css
+++ b/10-03/css/styles.css
@@ -7328,6 +7328,9 @@ textarea.form-control-lg {
 .fs-6 {
   font-size: 1rem !important;
 }
+.fs-7 {
+  font-size: 0.9rem !important;
+}
 
 .fst-italic {
   font-style: italic !important;
